--- a/templates/post.html
+++ b/templates/post.html
@@ -58,9 +58,9 @@
                 </div>
                 <ul class="article_tags">
                     {% for tag in post.tags.all %}
-                        <li><a href="{{ tag.name }}">#{{ tag.name }}</a></li>
+                        <li><a href="/tag/{{ tag.name }}">#{{ tag.name }}</a></li>
                     {% endfor %}
-                    <li><a href="/">#python.ru</a></li>
+                    <li><a href="/tag/python_ru">#python.ru</a></li>
                 </ul>
                 <div class="single_post_text" style="width: 100%">
                     {{ post.text|safe }}
