--- a/templates/blocks/posts_block.html
+++ b/templates/blocks/posts_block.html
@@ -4,6 +4,19 @@
         <h2>Последние посты</h2>
         <div class="posts_list">
             <div class="posts_item">
+                <h4>Тэги</h4>
+                <ul class="tags">
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                    <li><a href="#"># Tutorials</a></li>
+                </ul>
                 {% if tags %}
                     <h4>Тэги</h4>
                 {% endif %}
@@ -12,32 +25,30 @@
                         <li><a href="/tag/{{ tag.name }}"># {{ tag.name }}</a></li>
                     {% endfor %}
                 </ul>
-            </div>
-            <br><br>
             {% if sponsors %}
-            <div class="sponsor_wrapper">
-                <div class="sponsor_title">
-                    <div class="title">Community sponsor</div>
-                    <div class="heart">
-                        <img src="{% static 'img/heart.png' %}" alt="heart">
+                <div class="sponsor_wrapper">
+                    <div class="sponsor_title">
+                        <div class="title">Community sponsor</div>
+                        <div class="heart">
+                            <img src="{% static 'img/heart.png' %}" alt="heart">
+                        </div>
+                    </div>
+                    <div class="sponsor_list">
+                        {% for sponsor in sponsors %}
+                            <div class="sponsor_item">
+                            <a href="{{ sponsor.link }}" style="text-decoration: none;">
+                                <img src="/media/{{ sponsor.img }}" alt="sponsor">
+                                <p class="sponsor_name">{{ sponsor.title }}</p>
+                            </a>
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
-                <div class="sponsor_list">
-                    {% for sponsor in sponsors %}
-                        <div class="sponsor_item">
-                        <a href="{{ sponsor.link }}" style="text-decoration: none;">
-                            <img src="/media/{{ sponsor.img }}" alt="sponsor">
-                            <p class="sponsor_name">{{ sponsor.title }}</p>
-                        </a>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
             {% endif %}
+            </div>
             <div class="posts_item sec_col">
                 <div class="articles">
                     {% for article in articles %}
-
                         <article>
                         {% if article.is_our %}
                             <a href="/post/{{ article.pk }}">
